syntax = "proto3";

package orb;

option go_package = ".";

message SchedulingInputDifferencesMapping {
  repeated Differences differences = 1;
}

message Differences {
  optional SchedulingInput added = 1;
  optional SchedulingInput removed = 2;
  optional SchedulingInput changed = 3;
}

// TODO: will need to be updated as I continue to update SchedulingInput
// Anything as bytes are the self-describing wire format provided by K8s
message SchedulingInput {
  string timestamp = 1;
  repeated ReducedPod pendingpod_data = 2;
  repeated StateNodeWithPods statenodes_data = 3;
  repeated ReducedInstanceType instancetypes_data = 4;
}

message ReducedPod {
  string name = 1;
  string namespace = 2;
  string phase = 3;
}

// A stateNode with the Pods it has on it.
message StateNodeWithPods {
  optional ReducedNode node = 1;
  optional ReducedNodeClaim nodeClaim = 2;
  repeated ReducedPod pods = 3;

  message ReducedNode {
    string name = 1;
    bytes nodestatus = 2;
  }

  message ReducedNodeClaim {
    string name = 1;
  }
}

message ReducedInstanceType {
  string name = 1;
  repeated ReducedRequirement requirements = 2;
  repeated ReducedOffering offerings = 3;

  message ReducedRequirement {
    string key = 1;
    repeated string values = 2;
    string nodeselectoroperator = 3;
  }
  
  message ReducedOffering {
    repeated ReducedRequirement requirements = 1;
    double price = 2;
    bool available = 3;
  }
}

message SchedulingMetadataMapping {
  repeated MappingEntry entries = 1;

  message MappingEntry {
    string action = 1;
    string timestamp = 2;
  }
}